# xlstm-hip

./: CMakeLists.txt  README.md
bindings/python/: setup.py
bindings/python/xlstm_hip/: __init__.py
cmake/: CompilerFlags.cmake  FindHIP.cmake
docs/: API.md
examples/basic_usage/: simple_mlstm.cpp
include/xlstm/: xlstm.hpp
include/xlstm/blocks/mlstm/: mlstm_block.hpp  mlstm_cell.hpp  mlstm_layer.hpp
include/xlstm/components/: linear.hpp
include/xlstm/config/: config_base.hpp  mlstm_config.hpp  slstm_config.hpp
include/xlstm/core/: device.hpp  memory.hpp  tensor.hpp
include/xlstm/kernels/: mlstm_kernels.hpp
include/xlstm/models/: xlstm_model.hpp
scripts/: build.sh
src/core/: tensor.cpp
src/kernels/hip/common/: hip_common.hpp
src/kernels/hip/mlstm/: mlstm_forward.hip
tests/: CMakeLists.txt
tests/unit/: test_tensor.cpp
